Bug 389222 - [Wayland] Context menu opens behind plasma panel
Summary: [Wayland] Context menu opens behind plasma panel
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.14.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D17826
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-19 19:29 UTC by Patrick Silva
Modified: 2018-12-31 06:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: X11-
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-01-19 19:29:35 UTC
open dolphin
right click an item on bottom of its sidebar
menu sometimes opens behind the plasma panel

gwenview is also affected when I right click an item on bottom of places sidebar.

plasma 5.12 beta on Arch Linux
Comment 1 Martin Flöser 2018-01-19 19:44:05 UTC
On X11 a context menu was always above all other windows which also created a fair amount of problems. Here we try to just stack it above, but well that seems to break.
Comment 2 Safa Alfulaij 2018-01-23 04:58:16 UTC
I faced this exact thing here. As a note, if the small hidden popup panel is shown, context menus are above the panel.

Also, if the popup panel isn't shown, clicking somewhere else in Plasma (desktop, kicker/kickoff, etc will not hide it. Only opening new windows will hide it.

And also if there are any opened window, only the context menus of the shown applets in the system tray (not any other, not the clock, task manager, kicker/kickoff) will appear on the top-left corner. This is only if the small hidden popup panel is not shown.

To note also, one can have the small panel opened, and open all the context menus starting from left, and new  ones won't hide older. Not sure if this exists in X11.

I have Plasma 5.11 on Arch Linux

Shall I open different issues for this? :)
Comment 4 Roman Gilg 2018-05-24 06:34:23 UTC
With >5.13 only reproducible when Dolphin is started in Wayland native mode with:

QT_QPA_PLATFORM=wayland dolphin

(because in 5.13 the default changed to Xwayland mode for Qt apps, which don't set it explicitly).

So context menus only wrong for Wayland native apps.
Comment 5 Alexander Mentyu 2018-07-05 07:27:52 UTC
Tested Dolphin on KDE neon live dev git unstable - bottom right click menu almost always opens behind bottom panel without any QT_QPA_PLATFORM mode modifications
Comment 6 Martin Flöser 2018-12-27 19:38:21 UTC
Possible fix in https://phabricator.kde.org/D17826
Comment 7 Martin Flöser 2018-12-31 06:59:13 UTC
Git commit 792d8404551d18827b08cf7af709dbb3cfbd4d53 by Martin Flöser.
Committed on 31/12/2018 at 06:58.
Pushed by graesslin into branch 'master'.

Honor struts when placing Wayland transients

Summary:
So far transients were placed anywhere on the screen. This behavior was
inspired from X11 where context menus were able to overlap any other
window and use the complete screen area. On X11 context menus and
similar windows are override redirect and thus above all windows managed
by KWin.

On Wayland, though, context menus and similar and windows just like any
other window and thus follow stacking constraints like the parent
window. A context menu is stacked just above it's parent and is
(normally) below any panels. This resulted in problems that context menu
are stacked behind the panel with unreachable options.

This change changes the placement for transients to use the
PlacementArea instead of a screen geometry. Thus the transient does not
render behind the panel. Only in case of a fullscreen the struts are
ignored.
FIXED-IN: 5.15

Test Plan: New test case

Reviewers: #kwin

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D17826

M  +85   -1    autotests/integration/transient_placement.cpp
M  +2    -1    placement.cpp

https://commits.kde.org/kwin/792d8404551d18827b08cf7af709dbb3cfbd4d53